EntitiesFetcher - Extract private functions/classes